# dom_finder

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: coverage.yml  rust.yml
examples/: multithread.rs  multithread_scope.rs
src/: config.rs  errors.rs  finder.rs  lib.rs  pipeline.rs  sanitization.rs  sanitize_policy.rs  value.rs  value_from.rs
test_data/: ethereum.html  page_0.html  page_gen.html  page_nutrition.html  serp_config.yml
tests/: extract.rs  extract_into_struct.rs  parse.rs  pipeline.rs
