[package]
name = "dom_finder"
version = "0.2.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTML parsing with CSS seletors"
repository = "https://github.com/niklak/dom_finder"
documentation = "https://docs.rs/dom_finder/latest"
keywords = ["html", "css", "selectors", "scraping", "parser"]
authors = ["Mykola Humanov <morgenpurple@gmail.com>"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror = "1.0"
serde_yaml = "0.9.4"
serde = {version = "1.0", features = ["derive"]}
regex = "1.10.2"
dom_query = {version = "0.3.4" ,features = ["hashbrown"]}
tendril = "0.4.2" 
gjson = "0.8.1"
html-escape = "0.2.13"
rustc-hash = "1.1.0"
once_cell = "1.17.1"
hashbrown = {version = "0.14.3", default-features = false, features = ["allocator-api2", "inline-more", "serde"]}

# optional dependencies
serde_json = {version = "1.0", optional = true}


[features]
json_cfg = ["dep:serde_json"]

[dev-dependencies]
crossbeam-channel = "0.5.11"
