[package]
name = "dom_finder"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTML parsing with CSS selectors"
repository = "https://github.com/niklak/dom_finder"
documentation = "https://docs.rs/dom_finder/latest"
keywords = ["html", "css", "selectors", "scraping", "parser"]
authors = ["Mykola Humanov <morgenpurple@gmail.com>"]
readme = "README.md"
rust-version = "1.75"
exclude = [".*", "test-data", "examples", "deny.toml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror = "2.0.17"
serde_yaml = "0.9.33"
serde = {version = "1.0", features = ["derive"]}
regex = "1.12"
dom_query = {version = "0.23.1", features = ["hashbrown"]}
dom_sanitizer = {version = "0.4"}
tendril = "0.4.3" 
gjson = "0.8.1"
html-escape = "0.2.13"
once_cell = "1.20.2"
hashbrown = {version = "0.16", default-features = false, features = ["allocator-api2", "inline-more", "serde", "default-hasher"]}

# optional dependencies
serde_json = {version = "1.0", optional = true}


[features]
json_cfg = ["dep:serde_json"]

[dev-dependencies]
crossbeam-channel = "0.5.14"
